# cpp-template

./: .editorconfig  CMakeLists.txt  Makefile  README.txt  new.sh  vcpkg.json
cmake/: CompilerWarnings.cmake
lib/app-core/: CMakeLists.txt  app-core.cpp  app-core.hpp
src/: main.cpp
tests/: CMakeLists.txt  test_main.cpp
